# sniperbot-engine

./: .gitignore  README.md  pyproject.toml
sniperbot_engine/: ingestion.py  signals.py
sniperbot_engine/sniperbot_engine/: auth.py
sniperbot_engine/sniperbot_engine/sniperbot_engine/: ingestion.py
