[project]
name = "sniperbot-engine"
version = "0.1.0"
description = "Real-time financial data ingestion and signal evaluation framework."
authors = [
    { name = "Michael H. Torres" }
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
